# omega

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: models.json  permissions.json
examples/workflows/: daily_startup.yml
omega/: __init__.py  __main__.py  api.py  cli.py  config.py  logging.py  memory.py  model_router.py  observability.py  openrouter.py  permissions.py  queue.py  runtime.py  schema.py  self_improvement.py  tui.py  workflows.py
omega/agents/: __init__.py  base.py  browser_agent.py  coding.py  critic.py  devops.py  executor.py  memory_agent.py  planner.py  research.py  terminal_agent.py
omega/plugins/: __init__.py  api.py  audio.py  base.py  browser.py  builtin.py  calendar.py  database.py  docker.py  email.py  filesystem.py  git.py  github.py  googledrive.py  mcp.py  notes.py  ocr.py  pdf.py  rag.py  registry.py  search.py  slack.py  spreadsheet.py  terminal.py  vision.py  youtube.py
scripts/: benchmark.py  install.ps1  install.sh
tests/: test_executor.py  test_memory.py  test_model_router.py  test_permissions.py  test_plugins.py  test_tool_calls.py
